crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_bad_ext.snap
---
source: crates/alder-parse/src/type_.rs
description: "[:timeout | 1]"
---
ErrorRow(
    Ext(
        1,
        13,
    ),
    1,
    1,
)
