crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_bad_tag.snap
---
source: crates/alder-parse/src/type_.rs
description: "[:1]"
---
ErrorRow(
    Tag(
        Name(
            1,
            2,
        ),
        1,
        2,
    ),
    1,
    1,
)
