crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_in_result.snap
---
source: crates/alder-parse/src/type_.rs
description: "Result[User, [:timeout | r]]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 29,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "Result",
                },
            ],
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 12,
                                    },
                                },
                                value: "User",
                            },
                        ],
                    },
                    args: [],
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 28,
                    },
                },
                value: ErrorRow {
                    tags: [
                        TagVariant {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                },
                                value: "timeout",
                            },
                            args: [],
                        },
                    ],
                    ext: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 26,
                                },
                                end: Position {
                                    line: 1,
                                    column: 27,
                                },
                            },
                            value: "r",
                        },
                    ),
                },
            },
        ],
    },
}
