crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_leading_bar.snap
---
source: crates/alder-parse/src/type_.rs
description: "[|]"
---
ErrorRow(
    Start(
        1,
        2,
    ),
    1,
    1,
)
