crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_multiline.snap
---
source: crates/alder-parse/src/type_.rs
description: "[\n    :not_found(Id)\n    | :timeout\n    | r\n]\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: ErrorRow {
        tags: [
            TagVariant {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 15,
                        },
                    },
                    value: "not_found",
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 16,
                            },
                            end: Position {
                                line: 2,
                                column: 18,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 16,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 18,
                                            },
                                        },
                                        value: "Id",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ],
            },
            TagVariant {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Position {
                            line: 3,
                            column: 15,
                        },
                    },
                    value: "timeout",
                },
                args: [],
            },
        ],
        ext: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 7,
                    },
                    end: Position {
                        line: 4,
                        column: 8,
                    },
                },
                value: "r",
            },
        ),
    },
}
