crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_tag_args_newline.snap
---
source: crates/alder-parse/src/type_.rs
description: "[:not_found\n(Id)]\n"
---
ErrorRow(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 12,
            },
            unexpected: Position {
                line: 2,
                column: 1,
            },
        },
    ),
    1,
    1,
)
